--- a/frontend-test/src/common/style/custom.css
+++ b/frontend-test/src/common/style/custom.css
@@ -8,6 +8,16 @@ button{
     margin-left: 5px
 }
 
+.center {
+    margin: auto;
+    margin-top: 35px;
+    margin-right: -80px;
+    text-align: center;
+    width: 85%;
+    /* border: 3px solid green; */
+    padding: 10px;
+  }
+
 .cabeca{
     text-align: center
 }
