--- a/frontend-test/src/ListaMovimentacao/TableList_Movimentacao/listaMovimentacao.css
+++ b/frontend-test/src/ListaMovimentacao/TableList_Movimentacao/listaMovimentacao.css
@@ -1,8 +1,8 @@
 
-.table-sla-dep td:nth-child(1){
+.table-dep td:nth-child(1){
     width: 95%;
 }
-.table-sla-dep td:nth-child(2){
+.table-dep td:nth-child(2){
     width: 5%;
 }
 .table-sla td:nth-child(1){
@@ -15,6 +15,8 @@
     text-align: center;
     width: 10%;
 }
+
+
 .tbcenter{
     text-align: center;
 }
